# python-project-52

./: .env.example  Makefile  Procfile  README.md  django.po  pyproject.toml  setup.cfg
.github/workflows/: README.md  code-check.yml  lint_check.yml  run_tests.yml
task_manager/: conftest.py  settings.py  urls.py  views.py
task_manager/fixtures/: task_manager_data.json  test_label.json  test_task.json  test_user.json
task_manager/labels/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/: __init__.py  admin.py  filter.py  forms.py  models.py  urls.py  views.py
task_manager/templates/: 404.html  base.html  footer.html  form.html  index.html  layout.html  navbar.html  navigation.html
task_manager/users/: __init__.py  admin.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
tests/: __init__.py  conftest.py  test_labels_crud.py  test_statuses_crud  test_statuses_crud.py  test_tasks_crud.py  test_users_client.py  test_users_crud.py
tests/fixtures/: task_manager_data.json  test_status.json  test_task.json  test_user.json
tests/labels/: test_labels_form.py  test_labels_model.py  test_labels_post.py  test_labels_view.py
tests/statuses/: test_statuses_form.py  test_statuses_model.py  test_statuses_post.py  test_statuses_view.py
tests/tasks/: test_tasks_form.py  test_tasks_model.py  test_tasks_post.py  test_tasks_view.py
tests/user/: test_users_form.py  test_users_post.py
tests/users/: test_users_form.py  test_users_model.py  (+2 more)
(+65 files in other folders)
