[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["Aleksei Fominykh <foma1994@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
python-dotenv = "^0.21.1"
dj-database-url = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest-django = "^4.5.2"
wemake-python-styleguide = "^0.17.0"
django-extensions = "^3.2.1"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
