[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Django based Task manager."
authors = ["Aleksei Fominykh <foma1994@yandex.ru>"]
repository = "https://github.com/Ky3mu40FF/python-project-52"
readme = "README.md"

classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education", 
]

[tool.poetry.dependencies]
django = "^4.1.6"
dj-database-url = "^1.2.0"
python = "^3.10"
python-dotenv = "^0.21.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
django-bootstrap4 = "^22.3"
django-filter = "^22.1"
rollbar = "^0.16.3"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"
ipython = "^8.10.0"
pytest-django = "^4.5.2"
wemake-python-styleguide = "^0.17.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
